route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: 3scale-gateway
    router: api
  name: apicast
  namespace: gtw-prd-ipa
spec:
  host: portal-usiminas-staging.apiipa.usiminas.com
  port:
    targetPort: proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: 3scale-gateway
    router: api
  name: apicast
  namespace: gtw-prd-ipa
spec:
  host: portal-usiminas-staging.apiipa.usiminas.com
  port:
    targetPort: proxy
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
